# rp2040-ili9341

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/hello/: CMakeLists.txt
apps/pngs/: CMakeLists.txt  README.md  hw_config.c  main.c  png-help.c
apps/pngs/include/: png-help.h
libs/: zlibstatic.cmake
src/: CMakeLists.txt  ili9341.c  ili9341.pio  main.c
src/include/: ili9341.h  ili9341.pio.h  registers.h
